navbar set to fixed on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,10 @@
     --swiper-navigation-color: #fff;
 }
 
+    .h-screen-mobile {
+        height: 100svh;
+    }
+
 @layer components {
     h1, h2, h3 {
         @apply font-heading dark:text-slate-500
